<resources>
    <string name="app_name">UserProfile</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="age_label">Age</string>
    <string name="name_hint">Sushant</string>
    <string name="age_hint">18</string>
    <string name="email_hint">abc@gmail.com</string>
    <string name="go_back_button_label">Go Back</string>
    <string name="button_submit_label">Submit</string>
    <string name="add_profile">Add Profile</string>
    <string name="detail_profile">Profile Detail </string>

</resources>