<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileDisplayActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFCDD2">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/colorAccent"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/add_profile"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        tools:context=".ProfileInputActivity">



        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="@dimen/spacing_large"
            android:text="@string/name_label"
            android:textAppearance="@style/TextAppearance.MyApp.Headline"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_alignTop="@+id/textViewName"
            android:layout_alignBottom="@+id/textViewName"
            android:layout_toEndOf="@id/textViewName"
            android:elegantTextHeight="true"
            android:hint="@string/name_hint"
            android:padding="@dimen/spacing_large"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewName"
            android:layout_alignParentStart="true"
            android:padding="@dimen/spacing_large"
            android:text="@string/age_label"
            android:textAppearance="@style/TextAppearance.MyApp.Headline"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_alignTop="@+id/textViewAge"
            android:layout_alignBottom="@+id/textViewAge"
            android:layout_toEndOf="@id/textViewAge"
            android:elegantTextHeight="true"
            android:hint="@string/age_hint"
            android:padding="@dimen/spacing_large"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAge"
            android:layout_alignParentStart="true"
            android:padding="@dimen/spacing_large"
            android:text="@string/email_label"
            android:textAppearance="@style/TextAppearance.MyApp.Headline"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_alignTop="@+id/textViewEmail"
            android:layout_alignBottom="@+id/textViewEmail"
            android:layout_toEndOf="@id/textViewEmail"
            android:elegantTextHeight="true"
            android:hint="@string/email_hint"
            android:padding="@dimen/spacing_large"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etEmail"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/button_submit_label"
            android:textSize="@dimen/text_size_large"/>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
